Correção de código e validação de testes.